--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,79 @@
 		</div>
 	</section>		
 <!-- End of Contact  section
-	============================================= -->	
+	============================================= -->
+
+<!-- Start of Get in touch  section
+	============================================= -->
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section" data-background="assets/img/bg/get-bg.png">
+		<div class="container">
+			<div class="vt-section-title headline text-center pera-content">
+				<div class="subtitle">
+					Get in Touch
+				</div>
+				<h2 class="section_title">Interested in working together?</h2>
+			</div>
+			<div class="vt-get-in-touch-content d-flex justify-content-center text-center">
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Address:</h3>
+					<p>327 Park Ave S,
+					New York, NY 10010</p>
+				</div>
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Hours:</h3>
+					<p>Mon-Fri: 9 AM to 5 PM
+					Sun: Closed</p>
+				</div>
+				<div class="vt-get-in-touch-item headline pera-content">
+					<h3>Phone:</h3>
+					<p>+1 917 265 8444</p>
+				</div>
+			</div>
+			<div class="vt-btn mt-35 text-capitalize text-center">
+				<a href="#">Free Consultation</a>
+			</div>
+		</div>
+	</section>		
+<!-- End of Get in touch  section
+	============================================= -->
+
+<!-- Start of footer  section
+	============================================= -->
+	<footer id="vt-footer" class="vt-footer-section">
+		<div class="container">
+			<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
+				<div class="vt-footer-widget headline ul-li-block">
+					<div class="menu-widget">
+						<h3 class="widget-title text-uppercase">Useful Pages</h3>
+						<ul>
+							<li><a href="#">Solutions</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Shop</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="vt-footer-widget headline ul-li-block">
+					<div class="menu-widget">
+						<h3 class="widget-title text-uppercase">Our Services</h3>
+						<ul>
+							<li><a href="#">Strategic Planning</a></li>
+							<li><a href="#">Financial Consulting</a></li>
+							<li><a href="#">Operational Optimization</a></li>
+							<li><a href="#">HR Development</a></li>
+							<li><a href="#">Marketing Strategy</a></li>
+							<li><a href="#">Technology Integration</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+<!-- End of footer  section
+	============================================= -->			
+
+
 
 
 
