--- a/index.html
+++ b/index.html
@@ -1150,6 +1150,11 @@
 		<div class="container">
 			<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
 				<div class="vt-footer-widget headline ul-li-block">
+					<div class="logo-widget">
+						<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
+					</div>
+				</div>
+				<div class="vt-footer-widget headline ul-li-block">
 					<div class="menu-widget">
 						<h3 class="widget-title text-uppercase">Useful Pages</h3>
 						<ul>
@@ -1173,6 +1178,41 @@
 							<li><a href="#">Technology Integration</a></li>
 						</ul>
 					</div>
+				</div>
+				<div class="vt-footer-widget headline">
+					<div class="cta-widget">
+						<div class="cta-info d-flex align-items-center">
+							<div class="info-icon d-flex justify-content-center align-items-center">
+								<i class="far fa-phone"></i>
+							</div>
+							<div class="info-text">
+								<span>Have any questions?</span> <a href="#"><span>Free:</span> +1 917 2658444</a>
+							</div>
+						</div>
+						<div class="cta-text">
+							<a href="#"><span>Join Us</span>  to shape the future <i class="fal fa-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="vt-footer-widget headline">
+					<div class="social-widget">
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+						<a href="#"><i class="fab fa-linkedin-in"></i></a>
+						<a href="#"><i class="fab fa-dribbble"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="vt-footer-copyright d-flex">
+				<div class="vt-copyright-text">
+					©2024, <a href="#">Vertexify.</a> All Rights Reserved.
+				</div>
+				<div class="vt-copyright-menu ul-li">
+					<ul>
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Terms of Service</a></li>
+						<li><a href="#">Legal Info</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
