--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 <!-- Start of Banner section
 	============================================= -->
 	<section id="vt-banner" class="vt-banner-section item-view position-relative">
+		<div class="vt-vertical-shape active"></div>
 		<div class="vt-banner-shape">
 			<svg width="711" height="781" viewBox="0 0 711 781" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g style="mix-blend-mode:overlay" filter="url(#filter0_f_267_3604)">
@@ -1120,7 +1121,7 @@
 				</div>
 				<h2 class="section_title">Interested in working together?</h2>
 			</div>
-			<div class="vt-get-in-touch-content d-flex justify-content-center text-center">
+			<div class="vt-get-in-touch-content d-flex justify-content-center text-center flex-wrap">
 				<div class="vt-get-in-touch-item headline pera-content">
 					<h3>Address:</h3>
 					<p>327 Park Ave S,
@@ -1146,63 +1147,69 @@
 
 <!-- Start of footer  section
 	============================================= -->
-	<footer id="vt-footer" class="vt-footer-section">
+	<footer id="vt-footer" class="vt-footer-section position-relative">
+		<span class="vt-footer-shape position-absolute"><img src="assets/img/shape/logo_shape.svg" alt=""></span>
 		<div class="container">
-			<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
-				<div class="vt-footer-widget headline ul-li-block">
-					<div class="logo-widget">
-						<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
-					</div>
-				</div>
-				<div class="vt-footer-widget headline ul-li-block">
-					<div class="menu-widget">
-						<h3 class="widget-title text-uppercase">Useful Pages</h3>
-						<ul>
-							<li><a href="#">Solutions</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Shop</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="vt-footer-widget headline ul-li-block">
-					<div class="menu-widget">
-						<h3 class="widget-title text-uppercase">Our Services</h3>
-						<ul>
-							<li><a href="#">Strategic Planning</a></li>
-							<li><a href="#">Financial Consulting</a></li>
-							<li><a href="#">Operational Optimization</a></li>
-							<li><a href="#">HR Development</a></li>
-							<li><a href="#">Marketing Strategy</a></li>
-							<li><a href="#">Technology Integration</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="vt-footer-widget headline">
-					<div class="cta-widget">
-						<div class="cta-info d-flex align-items-center">
-							<div class="info-icon d-flex justify-content-center align-items-center">
-								<i class="far fa-phone"></i>
-							</div>
-							<div class="info-text">
-								<span>Have any questions?</span> <a href="#"><span>Free:</span> +1 917 2658444</a>
-							</div>
-						</div>
-						<div class="cta-text">
-							<a href="#"><span>Join Us</span>  to shape the future <i class="fal fa-arrow-right"></i></a>
+			<div class="vt-footer-content position-relative">
+				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
+					<div class="vt-footer-widget headline ul-li-block">
+						<div class="logo-widget">
+							<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
 						</div>
 					</div>
-				</div>
-				<div class="vt-footer-widget headline">
-					<div class="social-widget">
-						<a href="#"><i class="fab fa-facebook-f"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-linkedin-in"></i></a>
-						<a href="#"><i class="fab fa-dribbble"></i></a>
+					<div class="vt-footer-widget headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Useful Pages</h3>
+							<ul>
+								<li><a href="#">Solutions</a></li>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Shop</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Our Services</h3>
+							<ul>
+								<li><a href="#">Strategic Planning</a></li>
+								<li><a href="#">Financial Consulting</a></li>
+								<li><a href="#">Operational Optimization</a></li>
+								<li><a href="#">HR Development</a></li>
+								<li><a href="#">Marketing Strategy</a></li>
+								<li><a href="#">Technology Integration</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget headline">
+						<div class="cta-widget">
+							<div class="cta-info d-flex align-items-center">
+								<div class="info-icon d-flex justify-content-center align-items-center">
+									<i class="far fa-phone"></i>
+								</div>
+								<div class="info-text">
+									<span>Have any questions?</span> <a href="#"><span>Free:</span> +1 917 2658444</a>
+								</div>
+							</div>
+							<div class="cta-text">
+								<a href="#"><span>Join Us</span>  to shape the future <i class="fal fa-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="vt-footer-widget headline">
+						<div class="social-widget">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-linkedin-in"></i></a>
+							<a href="#"><i class="fab fa-dribbble"></i></a>
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="vt-scrollup position-absolute">
+					<a class="scrollup" href="#"><i class="far fa-arrow-up"></i></a>
+				</div>
+			</div> 
 			<div class="vt-footer-copyright d-flex">
 				<div class="vt-copyright-text">
 					©2024, <a href="#">Vertexify.</a> All Rights Reserved.
@@ -1246,174 +1253,5 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
-	<script>
-		var swiper = new Swiper(".vt-service-thumb", {
-			spaceBetween: 0,
-			slidesPerView: 6,
-			freeMode: true,
-			direction: 'vertical',
-			watchSlidesProgress: true,
-			pagination: {
-				el: ".vt-service-pagination",
-				clickable: true,
-			},
-		});
-		var swiper2 = new Swiper(".vt-service-slider", {
-			spaceBetween: 10,
-			navigation: {
-				nextEl: ".swiper-button-next",
-				prevEl: ".swiper-button-prev",
-			},
-			thumbs: {
-				swiper: swiper,
-			},
-			pagination: {
-				el: ".vt-service-pagination",
-				clickable: true,
-			},
-		});
-	</script>
-	<script>
-		if ($('.vt-service-slider-2').length > 0 ) {
-			var swiper2 = new Swiper(".vt-service-slider-2", {
-				slidesPerView: 3,
-				loop: true,
-				spaceBetween: 32,
-				roundLengths: true,
-				speed: 1000,
-				navigation: {
-					nextEl: ".vt-ser-next",
-					prevEl: ".vt-ser-prev",
-				},
-				breakpoints: {  
-					'1400': {
-						slidesPerView: 3,
-					},
-					'1300': {
-						slidesPerView: 3,
-					},
-					'1200': {
-						slidesPerView: 3,
-					},
-					'992': {
-						slidesPerView: 3,
-					},
-					'768': {
-						slidesPerView: 2,
-					},
-					'767': {
-						slidesPerView: 2 ,
-					},
-					'576': {
-						slidesPerView: 1,
-					},
-					'480': {
-						slidesPerView: 1,
-					},
-					'0': {
-						slidesPerView: 1,
-					},
-				},
-			});
-		};
-	</script>
-	<script>
-		if ($('.vt-testimonial-slider').length > 0 ) {
-			var swiper2 = new Swiper(".vt-testimonial-slider", {
-				slidesPerView: 3,
-				loop: true,
-				spaceBetween: 32,
-				roundLengths: true,
-				centeredSlides: true,
-				speed: 1000,
-				navigation: {
-					nextEl: ".vt-testi-next",
-					prevEl: ".vt-testi-prev",
-				},
-				pagination: {
-					el: ".vt-testi-pagination",
-					clickable: true,
-				},
-				breakpoints: {  
-					'1400': {
-						slidesPerView: 3,
-					},
-					'1300': {
-						slidesPerView: 3,
-					},
-					'1200': {
-						slidesPerView: 3,
-					},
-					'992': {
-						slidesPerView: 2,
-					},
-					'768': {
-						slidesPerView: 2,
-					},
-					'767': {
-						slidesPerView: 2 ,
-					},
-					'576': {
-						slidesPerView: 1,
-					},
-					'480': {
-						slidesPerView: 1,
-					},
-					'0': {
-						slidesPerView: 1,
-					},
-				},
-			});
-		};
-	</script>
-	<script>
-		$(document).on('click', '.vt-faq-item-area .accordion-item', function(){
-			$(this).addClass('faq_active').siblings().removeClass('faq_active')
-		});
-	</script>
-	<script>
-		if ($('.vt-contact-logo-slide').length > 0 ) {
-			var swiper2 = new Swiper(".vt-contact-logo-slide", {
-				loop: true,
-				speed: 1000,
-				slidesPerView: 3,
-				spaceBetween: 50,
-				roundLengths: true,
-				autoplay: {
-					delay: 2500,
-					disableOnInteraction: false,
-				},
-				breakpoints: {  
-					'1400': {
-						slidesPerView: 3,
-					},
-					'1300': {
-						slidesPerView: 3,
-					},
-					'1200': {
-						slidesPerView: 3,
-					},
-					'992': {
-						slidesPerView: 3,
-					},
-					'768': {
-						slidesPerView: 3,
-					},
-					'767': {
-						slidesPerView: 3 ,
-					},
-					'576': {
-						slidesPerView: 3,
-					},
-					'480': {
-						slidesPerView: 2,
-					},
-					'0': {
-						slidesPerView: 2,
-					},
-				},
-			});
-		};
-	</script>
 </body>
 </html>  
