--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   	<link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body class="home-1">
-  	<div id="preloader"></div>
+  	<div id="preloader">
+  		<div class="preloader-logo">
+  			<img src="assets/img/shape/logo_shape.svg" alt="">
+  		</div>
+  	</div>
 
 <!-- Start of Header section
 	============================================= --> 
@@ -144,7 +148,7 @@
 <!-- Start of Banner section
 	============================================= -->
 	<section id="vt-banner" class="vt-banner-section item-view position-relative">
-		<div class="vt-vertical-shape active"></div>
+		<div class="vt-vertical-shape txt_item_active"></div>
 		<div class="vt-banner-shape">
 			<svg width="711" height="781" viewBox="0 0 711 781" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g style="mix-blend-mode:overlay" filter="url(#filter0_f_267_3604)">
