--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
 			<div class="vt-service-content pt-50">
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-6">
-						<div class="vt-service-item">
+						<div class="vt-service-item position-relative">
+							<div class="vt-vertical-shape shape_2 txt_item_active"></div>
 							<div class="item-icon">
 								<img src="assets/img/icon/ser-icon1.svg">
 							</div>
@@ -214,7 +215,8 @@
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<div class="vt-service-item ver_2">
+						<div class="vt-service-item position-relative ver_2">
+							<div class="vt-vertical-shape shape_2 txt_item_active"></div>
 							<div class="item-icon">
 								<img src="assets/img/icon/ser-icon2.svg">
 							</div>
@@ -225,7 +227,8 @@
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<div class="vt-service-item ver_3">
+						<div class="vt-service-item position-relative ver_3">
+							<div class="vt-vertical-shape shape_2 txt_item_active"></div>
 							<div class="item-icon">
 								<img src="assets/img/icon/ser-icon3.svg">
 							</div>
@@ -244,7 +247,7 @@
 
 <!-- Start of About section
 	============================================= -->
-	<section id="vt-about" class="vt-about-section pb-120">
+	<section id="vt-about" class="vt-about-section position-relative pb-160">
 		<div class="container">
 			<div class="vt-about-content d-flex justify-content-between align-items-center">
 				<div class="vt-about-text-wrap">
@@ -282,6 +285,11 @@
 <!-- Start of Service section
 	============================================= -->
 	<section id="vt-service-2" class="vt-service-section-2 position-relative">
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="vt-service-content-2 position-relative">
 			<div class="vt-service-pagination"></div>
 			<div class="vt-service-thumb swiper-container">
