--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="vt-header-navigation d-flex align-items-center justify-content-between">
 					<div class="brand-logo">
-						<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a>
+						<a href="#"><img src="assets/img/logo/logo-1.svg" alt=""></a> 
 					</div>
 					<div class="main-navigation-cta d-flex align-items-center ">
 						<nav class="main-navigation clearfix ul-li">
@@ -248,11 +248,6 @@
 <!-- Start of About section
 	============================================= -->
 	<section id="vt-about" class="vt-about-section position-relative pb-160">
-		<div class="vt-vertical-shape-2 txt_item_active">
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
 		<div class="container">
 			<div class="vt-about-content d-flex justify-content-between align-items-center">
 				<div class="vt-about-text-wrap">
@@ -290,7 +285,11 @@
 <!-- Start of Service section
 	============================================= -->
 	<section id="vt-service-2" class="vt-service-section-2 position-relative">
-		
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="vt-service-content-2 position-relative">
 			<div class="vt-service-pagination"></div>
 			<div class="vt-service-thumb swiper-container">
@@ -500,9 +499,21 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-3" class="vt-service-section-3">
+	<section id="vt-service-3" class="vt-service-section-3 position-relative">
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="vt-service-content  pt-190 pb-150 position-relative">
-			<div class="vt-service-bg position-absolute"><img src="assets/img/bg/ser-bg.jpg" alt=""></div>
+			<div class="vt-service-bg position-absolute">
+				<img src="assets/img/bg/ser-bg.jpg" alt="">
+				<div class="vt-vertical-shape-2 txt_item_active">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
 			<div class="container">
 				<div class="vt-service-text-wrap-3">
 					<div class="vt-section-title headline pera-content">
@@ -788,8 +799,13 @@
 	============================================= -->
 	<section id="vt-why-choose" class="vt-why-choose-section pb-120">
 		<div class="vt-why-choose-content d-flex align-items-center">
-			<div class="vt-why-choose-img">
+			<div class="vt-why-choose-img position-relative">
 				<img src="assets/img/about/wc1.jpg" alt="">
+				<div class="vt-vertical-shape-2 txt_item_active">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 			<div class="vt-why-choose-text">
 				<div class="vt-section-title headline pera-content">
@@ -856,7 +872,12 @@
 
 <!-- Start of Blog  section
 	============================================= -->
-	<section id="vt-blog" class="vt-blog-section pb-120 pt-120">
+	<section id="vt-blog" class="vt-blog-section pb-120 pt-120 position-relative">
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="container">
 			<div class="vt-section-title headline pera-content">
 				<div class="subtitle">
@@ -920,7 +941,7 @@
 
 <!-- Start of Faq  section
 	============================================= -->
-	<section id="vt-faq" class="vt-faq-section pt-120 pb-200">
+	<section id="vt-faq" class="vt-faq-section pt-120 pb-200 position-relative">
 		<div class="container">
 			<div class="vt-section-title headline text-center pera-content">
 				<div class="subtitle">
@@ -1017,7 +1038,12 @@
 
 <!-- Start of Contact  section
 	============================================= -->
-	<section id="vt-contact" class="vt-contact-section pt-120 pb-80 position-relative">
+	<section id="vt-contact" class="vt-contact-section pt-120 pb-120 position-relative">
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="contact-img position-absolute">
 			<img src="assets/img/bg/contact.png" alt="">
 		</div>
