--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   	<meta charset="UTF-8">
   	<title>Home Page 1</title>
-  	<meta name="description" content="Logitek. - Logistics and Transportation WordPress Theme">
-  	<meta name="keywords" content="	cargo, corporate, courier wordpress theme, delivery service, freight, international, logistics, moving company, packaging, service, shipping, transport, transportation, trucking, warehouse">
+  	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
+  	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
   	<link rel="shortcut icon" href="assets/img/logo/f-icon.png" type="image/x-icon">
   	<!-- Mobile Specific Meta -->
