--- a/index-2.html
+++ b/index-2.html
@@ -530,7 +530,7 @@
 
 <!-- Start of Why choose Us section
 	============================================= -->
-	<section id="vt-why-choose" class="vt-why-choose-section pb-120">
+	<section id="vt-why-choose" class="vt-why-choose-section">
 		<div class="vt-why-choose-content d-flex align-items-center  dark_version">
 			<div class="vt-why-choose-img position-relative">
 				<img src="assets/img/about/wc2.jpg" alt="">
@@ -600,16 +600,90 @@
 
 <!-- Start of Testimonial section
 	============================================= -->
-	<section id="vt-testimonial-2" class="vt-testimonial-section-2 position-relative">
+	<section id="vt-testimonial-2" class="vt-testimonial-section-2 position-relative pt-120 pb-120">
 		<div class="vt-service-pattern position-absolute">
 			<img src="assets/img/bg/pattern.png" alt="">
 		</div>
 		<div class="container">
-			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle">
-					Expert Consulting Solutions
+			<div class="vt-testimonial-content-2">
+				<div class="vt-section-title ver_2 headline pera-content">
+					<div class="subtitle">
+						Client Testimonials
+					</div>
+					<h2 class="section_title">Clients Share Their Success Stories </h2>
 				</div>
-				<h2 class="section_title">Accelerate into the future.</h2>
+				<div class="vt-testimonial-slider-2 swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="vt-testimonial-item ver_2 ul-li headline pera-content">
+								<ul>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+								</ul>
+								<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+								<div class="vt-testimonial-author d-flex align-items-center">
+									<div class="item-img">
+										<img src="assets/img/about/test1.jpg" alt="">
+									</div>
+									<div class="item-text">
+										<h3>Cameron Williamson</h3>
+										<span>Marketing Director</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="vt-testimonial-item ver_2 ul-li headline pera-content">
+								<ul>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+								</ul>
+								<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+								<div class="vt-testimonial-author d-flex align-items-center">
+									<div class="item-img">
+										<img src="assets/img/about/test1.jpg" alt="">
+									</div>
+									<div class="item-text">
+										<h3>Cameron Williamson</h3>
+										<span>Marketing Director</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="vt-testimonial-item ver_2 ul-li headline pera-content">
+								<ul>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+									<li><i class="fas fa-star"></i></li>
+								</ul>
+								<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+								<div class="vt-testimonial-author d-flex align-items-center">
+									<div class="item-img">
+										<img src="assets/img/about/test1.jpg" alt="">
+									</div>
+									<div class="item-text">
+										<h3>Cameron Williamson</h3>
+										<span>Marketing Director</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-testi-slider-nav-2 position-relative  d-flex align-items-center justify-content-between">
+					<div class="vt-testi-prev-2 d-flex align-items-center justify-content-center"><i class="far fa-chevron-left"></i></div>
+					<div class="vt-testi-pagination-2 text-center"></div>
+					<div class="vt-testi-next-2 d-flex align-items-center justify-content-center"><i class="far fa-chevron-right"></i></div>
+				</div>
 			</div>
 		</div>
 	</section>			
